--- a/codesaleReview/WebContent/WEB-INF/web.xml
+++ b/codesaleReview/WebContent/WEB-INF/web.xml
@@ -4,7 +4,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-            /WEB-INF/applicationContext.xml
+            /WEB-INF/applicationContext.xml,/WEB-INF/application-security.xml
         </param-value>
   </context-param>
   <listener>
@@ -36,6 +36,28 @@
     <filter-name>hibernateFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  
+  <!-- Spring Refresh Introspector to avoid memory leak -->
+    <listener>
+        <listener-class>
+            org.springframework.web.util.IntrospectorCleanupListener
+        </listener-class>
+    </listener>
+    
+   <!-- SpringSecurity -->  
+  <filter>  
+        <filter-name>springSecurityFilterChain</filter-name>  
+        <filter-class>  
+            org.springframework.web.filter.DelegatingFilterProxy  
+        </filter-class>  
+   </filter>  
+    <filter-mapping>  
+        <filter-name>springSecurityFilterChain</filter-name>  
+        <url-pattern>/*</url-pattern>  
+        <dispatcher>REQUEST</dispatcher>
+		<dispatcher>FORWARD</dispatcher>
+    </filter-mapping>  
+  
   <filter>
     <filter-name>struts2</filter-name>
     <!--<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class> -->
