convert this project into maven project

--- a/codesaleReview/.settings/org.eclipse.core.resources.prefs
+++ b/codesaleReview/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/algorithm/newAlgorithm.jsp=UTF-8
 encoding//src/uts/codesale/security=UTF-8
+encoding/<project>=UTF-8
