--- a/codesaleReview/WebContent/WEB-INF/web.xml
+++ b/codesaleReview/WebContent/WEB-INF/web.xml
@@ -92,8 +92,8 @@
     </servlet-mapping>  
   
 <!-- =================ckeditor+ckfinder图片上传功能的配置结束=================== -->  
-  
-  <welcome-file-list>
-    <welcome-file>home.jsp</welcome-file>
+    <welcome-file-list>
+    <welcome-file>/home.jsp</welcome-file>
   </welcome-file-list>
+
 </web-app>
