Update the properties of table.

--- a/researchermall/telosys-tools.cfg
+++ b/researchermall/telosys-tools.cfg
@@ -1,7 +1,7 @@
 #Telosys-Tools properties
-#Thu Apr 24 16:14:29 EST 2014
+#Tue Apr 29 11:48:07 EST 2014
 WEB=src/main/webapp
-ENTITY_PKG=com.researchermall.bean
+ENTITY_PKG=com.researchermall.domain
 ProjectVariable.PROJECT_NAME=researchermall
 ProjectVariable.MAVEN_ARTIFACT_ID=researchermall
 TEST_SRC=src/test/java
